--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.11MB/s(Youtube:不良林), server: 167.88.61.2, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇳🇱 荷兰-1.20MB/s(Youtube:不良林), server: 213.183.59.229, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇺🇸 美国-2.95MB/s(Youtube:不良林), server: 38.75.136.21, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林), server: 185.167.116.252, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
-  - {name: 🇺🇸 美国-2.19MB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-3.27MB/s(Youtube:不良林), server: 38.68.134.85, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-1.14MB/s(Youtube:不良林), server: 38.121.43.71, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-1.78MB/s(Youtube:不良林), server: 167.88.63.79, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-3.54MB/s(Youtube:不良林), server: 38.75.136.102, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-2.84MB/s(Youtube:不良林), server: 38.114.114.69, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林), server: 185.167.116.24, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇺🇸 美国-2.89MB/s(Youtube:不良林), server: 38.114.114.67, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-1.97MB/s(Youtube:不良林), server: 149.202.82.172, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇳🇱 荷兰-1.76MB/s(Youtube:不良林), server: 213.183.59.229, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇷🇺 俄罗斯联邦-3.68MB/s(Youtube:不良林), server: 213.183.53.208, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 🇺🇸 美国-2.89MB/s(Youtube:不良林) 2, server: 38.75.136.135, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 未知国家-3.31MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
+  - {name: 未知国家-1.99MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇺🇸 美国-4.29MB/s(Youtube:不良林), server: 51.81.223.17, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.39MB/s(Youtube:不良林), server: 51.81.223.15, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林) 2
+      - 未知国家-3.31MB/s(Youtube:不良林)
+      - 未知国家-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林) 2
+      - 未知国家-3.31MB/s(Youtube:不良林)
+      - 未知国家-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林) 2
+      - 未知国家-3.31MB/s(Youtube:不良林)
+      - 未知国家-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林) 2
+      - 未知国家-3.31MB/s(Youtube:不良林)
+      - 未知国家-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林) 2
+      - 未知国家-3.31MB/s(Youtube:不良林)
+      - 未知国家-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林) 2
+      - 未知国家-3.31MB/s(Youtube:不良林)
+      - 未知国家-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.97MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.76MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林) 2
+      - 未知国家-3.31MB/s(Youtube:不良林)
+      - 未知国家-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
