--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-2.44MB/s(Youtube:不良林), server: 149.202.82.172, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.27MB/s(Youtube:不良林), server: 172.99.190.39, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇫🇷 法国-1.58MB/s(Youtube:不良林), server: 145.239.1.100, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇳🇱 荷兰-2.77MB/s(Youtube:不良林), server: 185.246.155.29, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇳🇱 荷兰-1.71MB/s(Youtube:不良林), server: 213.183.59.185, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 捷克-595.1KB/s(Youtube:不良林), server: ce.rutracker-cn.com, port: 443, type: trojan, password: 5y8y3CwxRVYhyfSY, sni: ce.rutracker-cn.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.75MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.95MB/s(Youtube:不良林), server: 149.202.82.172, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇳 中国-453.8KB/s(Youtube:不良林), server: svip02.01download.xyz, port: 35101, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.02MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: 38.75.136.135, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-3.31MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
-  - {name: 未知国家-1.99MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇺🇸 美国-2.47MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
   - {name: 🇺🇸 美国-4.29MB/s(Youtube:不良林), server: 51.81.223.17, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.39MB/s(Youtube:不良林), server: 51.81.223.15, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.27MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.77MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
+      - 捷克-595.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 未知国家-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.27MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.77MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
+      - 捷克-595.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 未知国家-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.27MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.77MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
+      - 捷克-595.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 未知国家-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.27MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.77MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
+      - 捷克-595.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 未知国家-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.27MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.77MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
+      - 捷克-595.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 未知国家-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.27MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.77MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
+      - 捷克-595.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 未知国家-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.27MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.58MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.77MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
+      - 捷克-595.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 未知国家-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
 rules:
