--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-1.71MB/s(Youtube:不良林), server: 213.183.59.185, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
-  - {name: 捷克-595.1KB/s(Youtube:不良林), server: ce.rutracker-cn.com, port: 443, type: trojan, password: 5y8y3CwxRVYhyfSY, sni: ce.rutracker-cn.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.75MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.95MB/s(Youtube:不良林), server: 149.202.82.172, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 中国-453.8KB/s(Youtube:不良林), server: svip02.01download.xyz, port: 35101, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.02MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-905.0KB/s(Youtube:不良林), server: svip02.01download.xyz, port: 35077, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.31MB/s(Youtube:不良林), server: 172.99.190.39, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 波兰-1.72MB/s(Youtube:不良林), server: 217.30.10.65, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇬🇧 英国-1.35MB/s(Youtube:不良林), server: 172.99.190.39, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 波兰-2.34MB/s(Youtube:不良林), server: 217.30.10.65, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
+  - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: 38.75.136.135, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-2.47MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
   - {name: 🇺🇸 美国-4.29MB/s(Youtube:不良林), server: 51.81.223.17, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
-      - 捷克-595.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-905.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.31MB/s(Youtube:不良林)
+      - 波兰-1.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 波兰-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
-      - 捷克-595.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-905.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.31MB/s(Youtube:不良林)
+      - 波兰-1.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 波兰-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
-      - 捷克-595.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-905.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.31MB/s(Youtube:不良林)
+      - 波兰-1.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 波兰-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
-      - 捷克-595.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-905.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.31MB/s(Youtube:不良林)
+      - 波兰-1.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 波兰-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
-      - 捷克-595.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-905.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.31MB/s(Youtube:不良林)
+      - 波兰-1.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 波兰-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
-      - 捷克-595.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-905.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.31MB/s(Youtube:不良林)
+      - 波兰-1.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 波兰-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.71MB/s(Youtube:不良林)
-      - 捷克-595.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-905.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.31MB/s(Youtube:不良林)
+      - 波兰-1.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 波兰-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
